# jmcfi_clinic

./: .env  .env.example  .gitignore  APP_SEPARATION_PLAN.md  APP_STRUCTURE_STATUS.md  DENTAL_RECORDS_IMPLEMENTATION.md  DENTAL_RECORDS_QUICK_START.md  DENTAL_SYSTEM_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  FORM_ERROR_STYLING_GUIDE.md  GOOGLE_OAUTH_GUIDE.md  GOOGLE_OAUTH_PROFILE_DATA.md  GOOGLE_OAUTH_SUMMARY.md  HEALTH_PROFILE_FORM_MAPPING.md  OPTIMIZATION_COMPLETE.md  README.md  REALTIME_MESSAGING_IMPLEMENTATION.md  REAL_TIME_TESTING_GUIDE.md  SESSION_TIMEOUT_GUIDE.md  SESSION_TIMEOUT_SUMMARY.md  VANILLA_JS_REFACTORING_ROADMAP.md  audit_results.json  clinic_erd.dot  create_sample_medical_records.py  db.sqlite3  dental_form2_text.txt  extract_pdf.py  extract_remaining_pdfs.py  form-error-demo.html  pyproject.toml  requirements.txt  test_models.py
analytics/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
appointments/: APPOINTMENT_SCHEDULING_POLICY.md  admin.py  appointment_utils.py  apps.py  calendar_service.py  forms.py  models.py  tests_appointment_settings.py  tests_calendar.py  tests_schedule.py  tests_staff_permissions.py  urls.py  views.py
backend/: asgi.py  settings.py  urls.py
core/: ADMIN_ROLE_POLICY.md  GOOGLE_STUDENT_PROFILE_POLICY.md  academic_catalog.py  academic_forms.py  academic_settings_views.py  access_control.py  access_middleware.py  adapters.py  admin.py  admin_mixins.py  apps.py  clinical_audit.py  clinical_audit_views.py  clinical_permissions.py  context_processors.py  decorators.py  feature_access.py  form_widgets.py  forms.py  htmx_utils.py  media_views.py  middleware.py  mixins.py  models.py  nav_context.py  notification_delivery.py  profile_forms.py  profile_policy.py  roles.py  settings_audit.py  settings_forms.py  settings_service.py  settings_signals.py  settings_views.py  signals.py  status_styles.py  storage.py  subnav_helpers.py  supabase_config.py  tests.py  (+18 more)
data/: academic_catalog.json
dental_records/: admin.py  apps.py  dental_examination_layout.py  dental_history_layout.py  forms.py  health_questionnaire_layout.py  models.py  systems_review_layout.py  tests.py  urls.py  views.py
docs/: SUPABASE.md
document_request/: DOCUMENT_REQUEST_POLICY.md  admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
feedback/: admin.py  models.py  (+3 more)
(+778 files in other folders)
