[project]
name = "jmcfi-clinic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-allauth[google,socialaccount]>=65.10.0",
    "jwt>=1.4.0",
    "markdown>=3.10.1",
    "pillow>=10.0.0",
    "python-decouple>=3.8",
    "requests>=2.32.4",
]
