[project]
name = "jmcfi-clinic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "cryptography==45.0.6",
    "django==5.2",
    "django-allauth[google,socialaccount]==65.10.0",
    "django-extensions==4.1",
    "idna==3.10",
    "jwt>=1.4.0",
    "markdown==3.10.1",
    "pillow==12.1.0",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pydot==4.0.1",
    "pyjwt==2.10.1",
    "pyparsing==3.3.2",
    "python-decouple==3.8",
    "requests==2.32.4",
    "ruff==0.11.5",
    "setuptools==75.8.0",
    "sqlparse==0.5.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv==0.6.14",
    "wheel==0.45.1",
    "whitenoise==6.9.0",
]
