[project]
name = "jmcfi-clinic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # core runtime dependencies (direct usage only — transitives are auto-resolved)
    "django==5.2",
    "django-allauth[google,socialaccount]==65.10.0",
    "pyjwt[crypto]==2.10.1",   # required by allauth socialaccount with crypto support
    "markdown==3.10.1",         # health_tips templatetags
    "pillow==12.1.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "requests==2.32.4",
    "python-docx>=1.2.0",
    "whitenoise==6.9.0",
]

[project.optional-dependencies]
dev = [
    "django-extensions==4.1",
    "pydot==4.0.1",    # ERD generation via manage.py graph_models
    "ruff==0.11.5",
    "uv==0.6.14",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scripts*", "static*", "templates*"]